docs(update kratos template):
